tests/fail/fail_encap_method_priv.tk
import std/string

fn main() {
    auto s = String::from("Secret")
    // drop is defined as `fn drop(self#)` inside `impl String@encap`, WITHOUT `pub`.
    // It should be private to the module/file defining it.
    // This call should fail compilation.
    s.drop()
}
